JTG was decoupled from file system.